Login Come To Areas

--- a/KevalThemeAddressBook.csproj
+++ b/KevalThemeAddressBook.csproj
@@ -20,6 +20,8 @@
 
   <ItemGroup>
     <Folder Include="Areas\DashBoard\Models\" />
+    <Folder Include="Areas\SEC_Login\Models\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
